<resources>
    <string name="app_name">车马部落</string>
    
    <string name="header_message">消息中心</string>
    <string name="header_location">选择城市</string>
    <string name="header_add_car">填写爱车信息</string>
    <string name="header_choose_plate">选择车牌号</string>
    <string name="header_choose_brand">选择品牌</string>
    <string name="header_choose_series">选择车系</string>
    <string name="header_choose_type">选择车系</string>

    <string name="dialog_btn_submit">确定</string>
    <string name="dialog_btn_cancle">取消</string>

    <string name="tv_share">分享</string>
    <string name="tv_share_sina">新浪微博</string>
    <string name="tv_share_qq_f">QQ好友</string>
    <string name="tv_share_qq_q">QQ空间</string>
    <string name="tv_share_wechat_f">微信好友</string>
    <string name="tv_share_wechat_q">微信朋友圈</string>

    <string name="err_net_link">网络未连接,请打开网络后重新操作！</string>

    <string name="btn_save">保存</string>

    <string name="tv_homepage_index">首页</string>
    <string name="tv_homepage_order">订单</string>
    <string name="tv_homepage_my">我的</string>
    <string name="tv_homepage_handbook">保养手册</string>
    <string name="tv_homepage_service">服务说明</string>
    <string name="tv_homepage_active">优惠活动</string>
</resources>
